Typeform - updated url-slug to auto populate via js, set up dialog modal as thank you for submit completion, right box update icon, copy and paddings

--- a/page-typeform.html
+++ b/page-typeform.html
@@ -65,6 +65,11 @@ https://x3.gophr.com/wp-admin/admin.php?page=wpcf7&post=94328&active-tab=3
 
 --- v04
 ---
+
+[hidden url-slug default:user_url "https://x3.gophr.com/av-gophr-typeform"]
+
+--- v05
+---
 <div class="typeform-columns">
   <div class="typeform-col">
     <label> <strong>Name<em>*</em></strong>
@@ -89,7 +94,7 @@ https://x3.gophr.com/wp-admin/admin.php?page=wpcf7&post=94328&active-tab=3
   
 <div class="typeform-columns">
   <div class="typeform-col">
-    <label> <strong>Approx deliveries per month<em>*</em></strong>
+    <label> <strong>Deliveries per month<em>*</em></strong>
       [select* deliveries-pm "0-10" "11-50" "51-200" "200+" "Not sure"] </label>
   </div>
   <div class="typeform-col">
@@ -103,7 +108,7 @@ https://x3.gophr.com/wp-admin/admin.php?page=wpcf7&post=94328&active-tab=3
     [textarea how-we-can-help placeholder "Any particular requests"] </label>
 </div>
   
-[hidden url-slug default:user_url "https://x3.gophr.com/av-gophr-typeform"]
+[hidden url-slug default:user_url]
 
 <div class="btn-submit_typeform btn-gophr_button_outline">[submit "Submit"]</div>
 
@@ -111,7 +116,7 @@ https://x3.gophr.com/wp-admin/admin.php?page=wpcf7&post=94328&active-tab=3
 --- [Mail] 
 ---
 - Email Header:
-To: [_site_admin_email], chris.mason@gophr.com, chris.mason@gophr.it
+To: [_site_admin_email], chris.mason@gophr.com, chris.mason@gophr.it, arlan.viray@gmail.com
 From: [_site_title] <wordpress@x3.gophr.com>
 Subject: [_site_title] "TestForm"
 
