Typeform - updated select option (for Deliveries per month) to have a placeholder name Approx

--- a/page-typeform.html
+++ b/page-typeform.html
@@ -116,7 +116,7 @@ skip_mail: on
 <div class="typeform-columns">
   <div class="typeform-col">
     <label> <strong>Deliveries per month<em>*</em></strong>
-      [select* deliveries-pm "0-10" "11-50" "51-200" "200+" "Not sure"] </label>
+      [select* deliveries-pm first_as_label "Approx" "0-10" "11-50" "51-200" "200+" "Not sure"] </label>
   </div>
   <div class="typeform-col">
     <label> <strong>How did you hear about us?</strong>
@@ -126,7 +126,7 @@ skip_mail: on
   
 <div class="typeform-row">
   <label> <strong>How we can help?</strong>
-    [textarea how-we-can-help placeholder "Any particular requests"] </label>
+    [textarea how-we-can-help placeholder "Any specific delivery requests or challenges?"] </label>
 </div>
   
 [hidden url-slug default:user_url]
