Navigation menu - (JS) click event to show Intercom popup for /FAQ/Contact US. (CSS) added media query for 1200 width to display mobile navigation due for the new added navigation menu Courier Applications

--- a/pagebuilder-js.html
+++ b/pagebuilder-js.html
@@ -124,7 +124,13 @@ const gophrInit = {
         // (Main Menu 2025 - FAQs | Contact Us)
         const MenuItem95154 =  document.querySelectorAll(".menu-item-95154")
         if (MenuItem95154.length) {
-            MenuItem95154.forEach((item) => item.classList.add("intercom-open"))
+            MenuItem95154.forEach((item) => {
+                // item.classList.add("intercom-open")
+                item.querySelector("a").addEventListener("click", (e) => {
+                    e.preventDefault()
+                    window.Intercom("show")
+                })
+            })
         }
 
         setTimeout(() => {
